# retoc

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: release.yml
load_logger/: Cargo.toml
load_logger/src/: lib.rs  log.rs  resolvers.rs
retoc/: Cargo.toml
retoc/src/: asset_conversion.rs  asset_registry.rs  compact_binary.rs  crc.rs  file_pool.rs  iostore.rs  iostore_writer.rs  legacy_asset.rs  lib.rs  shader_library.rs  version.rs  version_heuristics.rs  zen.rs  zen_asset_conversion.rs
retoc/tests/UE4.27/: BP_Aphid_Meat_Prop.metadata.json  BP_Aphid_Meat_Prop.uasset  BP_SpicyChoppingDamage.uasset  EQ_StaticObstacleTargetLocation.metadata.json  EQ_StaticObstacleTargetLocation.uasset  SPR_UI_Battle.metadata.json  Table_SignsJanuary.uasset  TestModUI.uzenasset
retoc/tests/UE5.4/: BP_Table_Lamp.uzenasset  Randy.uasset  ShaderArchive-NuclearNightmare-PCD3D_SM6-PCD3D_SM6.ushaderbytecode
retoc/tests/UE5.5/: BP_ThirdPersonCharacter.uasset  BP_ThirdPersonCharacter.uexp  SM_Cube.uzenasset
retoc/tests/UE5.6/: M_Mannequin.uzenasset  SK_Mannequin.uzenasset  SM_Cube.uzenasset  T_Quinn_01_D.ubulk  T_Quinn_01_D.uexp  T_Quinn_01_D.uzenasset
retoc/tests/UE5.7/: BP_ThirdPersonCharacter.uzenasset  T_Quinn_01_D.uasset
retoc_cli/: Cargo.toml
retoc_cli/src/: main.rs
src/: asset_conversion.rs  asset_registry.rs  compact_binary.rs  compression.rs  container_header.rs  file_pool.rs  iostore.rs  iostore_writer.rs  legacy_asset.rs  lib.rs  logging.rs  main.rs  manifest.rs  name_map.rs  script_objects.rs  ser.rs  shader_library.rs  verse_vm_types.rs  version.rs  version_heuristics.rs  zen.rs  zen_asset_conversion.rs
tests/UE4.27/: BP_SpicyChoppingDamage.metadata.json  SPR_UI_Battle.uasset  T_Emissive.metadata.json  T_Emissive.uasset  Table_SignsJanuary.metadata.json  TestModUI.metadata.json  TestModUI.uasset  TestModUI.uexp
tests/UE5.4/: BP_Russian_pool_table.metadata.json  BP_Russian_pool_table.uasset  BP_Table_Lamp.uasset  Randy.uexp  Randy.uzenasset  ShaderArchive-Global-PCD3D_SM6-PCD3D_SM6.ushaderbytecode  ShaderArchive-NuclearNightmare-PCD3D_SM6-PCD3D_SM6.uzenshaderbytecode
tests/UE5.5/: BP_ThirdPersonCharacter.uzenasset  T_Test.uzenasset
