[workspace]
members = ["retoc", "retoc_cli"]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["trumank", "Archengius"]
repository = "https://github.com/trumank/retoc"
homepage = "https://github.com/trumank/retoc"
license = "MIT"

[profile.release]
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
