[package]
name = "retoc"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
aes.workspace = true
anyhow.workspace = true
base64.workspace = true
bitflags.workspace = true
blake3.workspace = true
byteorder.workspace = true
cityhasher.workspace = true
clap.workspace = true
flate2.workspace = true
fs-err.workspace = true
hex.workspace = true
indexmap.workspace = true
indicatif.workspace = true
itertools.workspace = true
jmap.workspace = true
key-mutex.workspace = true
lz4_flex.workspace = true
oodle_loader.workspace = true
pariter.workspace = true
rayon.workspace = true
repak.workspace = true
ser-hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha1.workspace = true
strum.workspace = true
tracing.workspace = true
typed-path.workspace = true
zstd.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
