[package]
name = "retoc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "retoc"
path = "src/main.rs"

[dependencies]
retoc = { path = "../retoc" }
anyhow = "1.0.100"
blake3 = "1.8.2"
cityhasher = "0.1.0"
clap = { version = "4.5.48", features = ["derive"] }
fs-err = "3.1.2"
hex = "0.4.3"
indicatif = "0.17.11"
itertools = "0.14.0"
jmap = { git = "https://github.com/trumank/jmap.git", version = "0.1.0" }
rayon = "1.11.0"
repak = { git = "https://github.com/trumank/repak.git", version = "0.2.2", features = ["oodle"] }
ser-hex = { git = "https://github.com/trumank/ser-hex", version = "0.1.0" }
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.26.3", features = ["derive"] }
