[package]
name = "retoc_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "retoc"
path = "src/main.rs"

[dependencies]
retoc = { path = "../retoc" }
anyhow.workspace = true
blake3.workspace = true
cityhasher.workspace = true
clap.workspace = true
fs-err.workspace = true
hex.workspace = true
indicatif.workspace = true
itertools.workspace = true
jmap.workspace = true
rayon.workspace = true
repak.workspace = true
ser-hex.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
